No more 'have_maria' variable, use information schema.engines. Fix for some pushbuild failures.

BitKeeper/deleted/.del-have_maria.require:
  Delete: mysql-test/r/have_maria.require
mysql-test/include/have_maria.inc:
  no more 'have_maria' variable, use information schema.engines
mysql-test/r/maria-recovery-rtree-ft.result:
  removed piece
mysql-test/t/maria-recovery-rtree-ft.test:
  This portion seems to break on some pushbuild machine, let's disable
  it for now until BUG#36319 is fixed.
sql/set_var.cc:
  no more 'have_maria' variable, use information schema.engines
storage/maria/ma_rt_split.c:
  On non-debug builds, the logging was wrong